SSC-1470 cruise, photo/video tab, fix spacing for image caption

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-photovideo.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-photovideo.less
@@ -79,7 +79,7 @@
                 font-size: 12px;
                 left: 10px;
                 line-height: 1;
-                padding: 10px 20px 10px 10px;
+                padding: 10px;
                 position: absolute;
             }
         }
